Cargar index.tsx vía esm.sh para corregir MIME type en GitHub Pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <body>
   <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="https://esm.sh/gh/arturop/reformas/index.tsx"></script>
 </body>
-</html><link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
+</html>
