Restaurar funcionalidad de Catastro

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -33,4 +34,5 @@
   */}
   <script type="module" src="https://esm.sh/gh/arturop/reformas@main/index.tsx"></script>
 </body>
-</html>
+</html><link rel="stylesheet" href="index.css">
+<script src="index.tsx" type="module"></script>
