Restaurar funcionalidad de Catastro

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>GeoInfo AI - Ubicación y Propiedad</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌍</text></svg>">
+  <link rel="stylesheet" href="index.css">
 <script type="importmap">
 {
   "imports": {
@@ -14,7 +15,9 @@
     "react/": "https://esm.sh/react@^19.1.0/",
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.0.1"
+    "@google/genai": "https://esm.sh/@google/genai@^1.0.1",
+    "path": "https://esm.sh/path@^0.12.7",
+    "vite": "https://esm.sh/vite@^6.3.5"
   }
 }
 </script>
@@ -27,12 +30,12 @@
 <body>
   <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
   <div id="root"></div>
-  {/*
-    IMPORTANTE: Reemplaza YOUR_GITHUB_USERNAME, YOUR_REPO_NAME y YOUR_BRANCH_NAME (usualmente 'main')
-    con tus datos reales de GitHub para que esm.sh pueda cargar tu index.tsx.
-    Ejemplo: https://esm.sh/gh/nombreusuario/nombreproyecto@main/index.tsx
-  */}
+  <!--
+    IMPORTANTE: El siguiente script carga tu aplicación directamente desde GitHub vía esm.sh.
+    esm.sh transpilará tu index.tsx (y sus dependencias) a JavaScript.
+    Asegúrate de que 'arturop/reformas@main' apunte a tu repositorio y rama correctos.
+  -->
   <script type="module" src="https://esm.sh/gh/arturop/reformas@main/index.tsx"></script>
 </body>
-</html><link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
+</html>
+
