--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,39 +6,31 @@
   <title>GeoCatastro - Consulta Catastral</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🗺️</text></svg>">
-  <link rel="stylesheet" href="index.css">
+  <!-- index.css será manejado por Vite si lo importas en tu JS/TS o si lo dejas aquí y Vite lo procesa.
+       Si no tienes un index.css o prefieres importarlo en JS, puedes eliminar la siguiente línea.
+  <link rel="stylesheet" href="/index.css"> -->
+<style>
+  body {
+    font-family: sans-serif; /* Asegura una fuente base */
+  }
+  /* Estilos adicionales que puedas necesitar y que no estén en Tailwind o index.css */
+</style>
 <script type="importmap">
 {
   "imports": {
-    "react/jsx-runtime": "https://esm.sh/react@^19.1.0/jsx-runtime",
-    "react/": "https://esm.sh/react@^19.1.0/",
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.0.1",
+    "react/": "https://esm.sh/react@^19.1.0/",
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^6.3.5"
   }
 }
 </script>
-<style>
-  /* Estilos para la clase prose generada por Tailwind Typography plugin (usado para el output de Gemini) */
-  .prose { color: inherit; }
-  .prose code::before, .prose code::after { content: ""; }
-</style>
 </head>
 <body>
   <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
   <div id="root"></div>
-  <!--
-    IMPORTANTE: El siguiente script carga tu aplicación directamente desde GitHub vía esm.sh.
-    esm.sh transpilará tu index.tsx (y sus dependencias) a JavaScript.
-    Asegúrate de que 'arturop/reformas@main' apunte a tu repositorio y rama correctos.
-    Esta configuración es para cuando NO usas un proceso de build local para GitHub Pages.
-    Si usas 'npm run build' y despliegas la carpeta 'dist', este script y el importmap
-    son manejados de forma diferente por Vite y el HTML de 'dist' será el que se use.
-  -->
-  <script type="module" src="https://esm.sh/gh/arturop/reformas@main/index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
-</html>
-<link rel="stylesheet" href="index.css">
+</html><link rel="stylesheet" href="index.css">
 <script src="index.tsx" type="module"></script>
