--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale-1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GeoCatastro - Consulta Catastral</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🗺️</text></svg>">
-  <!-- index.css será manejado por Vite si lo importas en tu JS/TS o si lo dejas aquí y Vite lo procesa.
-       Si no tienes un index.css o prefieres importarlo en JS, puedes eliminar la siguiente línea.
-  <link rel="stylesheet" href="/index.css"> -->
 <style>
   body {
     font-family: sans-serif; /* Asegura una fuente base */
