--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "react/": "https://esm.sh/react@^19.1.0/",
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^6.3.5",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16"
   }
 }
 </script>
