--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^6.3.5",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16"
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16",
+    "proj4": "https://esm.sh/proj4@^2.11.0"
   }
 }
 </script>
