Corregir manejo de errores funcionales del Catastro en App.tsx y refinar logging

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     "vite": "https://esm.sh/vite@^6.3.5",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0",
     "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16",
-    "proj4": "https://esm.sh/proj4@^2.11.0"
+    "proj4": "https://esm.sh/proj4@2.10.0"
   }
 }
 </script>
@@ -32,5 +32,4 @@
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
-</html><link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
+</html>
