--- a/index.html
+++ b/index.html
@@ -32,4 +32,5 @@
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
-</html>
+</html><link rel="stylesheet" href="index.css">
+<script src="index.tsx" type="module"></script>
