--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
-    "path": "https://esm.sh/path@^0.12.7",
+    "proj4": "https://esm.sh/proj4@2.10.0",
     "vite": "https://esm.sh/vite@^6.3.5",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16",
-    "proj4": "https://esm.sh/proj4@2.10.0"
+    "path": "https://esm.sh/path@^0.12.7",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16"
   }
 }
 </script>
