--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     "vite": "https://esm.sh/vite@^6.3.5",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0",
     "path": "https://esm.sh/path@^0.12.7",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16"
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16",
+    "url": "https://esm.sh/url@^0.11.4",
+    "@google/genai": "https://esm.sh/@google/genai@^1.1.0"
   }
 }
 </script>
