--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
   <div id="root"></div>
-  <script type="module" src="/main.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html><link rel="stylesheet" href="index.css">
 <script src="index.tsx" type="module"></script>
