--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
-    "proj4": "https://esm.sh/proj4@2.10.0",
+    "proj4": "https://esm.sh/proj4@^2.17.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.1.0",
     "vite": "https://esm.sh/vite@^6.3.5",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.5.0",
     "path": "https://esm.sh/path@^0.12.7",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16",
     "url": "https://esm.sh/url@^0.11.4",
-    "@google/genai": "https://esm.sh/@google/genai@^0.12.0"
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.1.16"
   }
 }
 </script>
@@ -35,5 +35,4 @@
   <div id="root"></div>
   <script type="module" src="./index.tsx"></script>
 </body>
-</html><link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
+</html>
